--- a/css/style.css
+++ b/css/style.css
@@ -225,17 +225,40 @@ section p {
 .testimony {
      width: 50%;
      color: #ffffff00;
-     height: 100%;
+     height: 50vh;
      background-image: url(../images/testimonial1.webp);
-     background-size:auto;
+     background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
-     border: solid 2em black;
 }
 
 .contact-text {
      width: 50%;
+     margin: 0 2em;
 }
+
+.contact-text > * {
+     font-size: clamp(.75rem, 1.4vw, 1.5rem);
+}
+
+.contact-text > h3 {
+     color: rgb(185, 34, 20);
+     font-weight: 600;
+     font-size: 2em;
+     margin: 0;
+}
+
+.contact-text > p {
+     margin: 3px;
+}
+
+.contact-form {
+     background-color: white;
+     padding: 1em;
+     width: 100%;
+     text-align: center;
+}
+
 
 
 /******************************************
