--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@ html, body {
      font-family: 'Kanit', sans-serif;
  }
 
-
+body {
+     overflow-x: initial;
+}
 
 .navigation {
      background-color: cornflowerblue;
@@ -259,6 +261,34 @@ section p {
      text-align: center;
 }
 
+.contact-form > input {
+     width: 50%;
+     border: 2px solid rgb(198, 14, 14);
+     border-radius: 6px;
+     box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.550), inset 3px 3px 3px rgba(0, 0, 0, 0.550);
+     margin-top: 1em;
+}
+.contact-form > input:first-child{
+     margin-top: 0;
+}
+
+.contact-form > input:nth-child(5){
+     padding-bottom: 8em;
+}
+
+.contact-form > input:focus  {
+     outline-width: 2px;
+     outline-style: solid;
+     outline-color: red;
+}
+
+.button {
+     background-color: red;
+     color: white;
+     padding: .5em 0;
+     width: 20% !important;
+}
+
 
 
 /******************************************
@@ -304,6 +334,7 @@ header > h1 {
    .hero-nav {
      background: linear-gradient(to top, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 10%, rgba(0,0,0,0) 100%);     
      padding-top: 10em;
+     padding-right: 1.5em;
    }
    
    .hero-nav ul {
@@ -326,3 +357,63 @@ header > h1 {
      transition: 0.1s;
      transform: scale(1.6) translateY(-1em);
    }
+
+
+
+/******************************************
+/* FOOTER
+/*******************************************/
+
+footer {
+     height: 25vh;
+     width: 100%;
+     display: flex;
+     padding-top: 3em;
+}
+
+.social-footer-left > nav {
+     width: 30%;
+     text-align: center;
+     padding-left: 1em;
+     font-size: 1.5em;
+}
+
+.social-footer-left > figure {
+     margin: 0 0 0 1em;
+     background-image: url(../images/logo.webp);
+     background-size:contain;
+     background-repeat: no-repeat;
+     background-position: center;
+     width: 100%;
+     height: 80px;
+}
+
+.mailing {
+     width: 40%;
+     color: white;
+     align-items: center;
+     justify-content: center;
+     padding-top: 1em;
+     padding-left: 3em;
+}
+
+
+.footnav {
+     color: white;
+     width: 30%;
+     height: 20vh;
+}
+
+.footnav > ul {
+     display: flex;
+     flex-direction: column;
+     text-align: left;
+}
+
+.footnav li {
+     padding: 1px 0;
+}
+
+.footnav li:first-child {
+     color: red;
+}
