--- a/css/style.css
+++ b/css/style.css
@@ -91,14 +91,14 @@ nav ul li a {
 }
    
 .about {
-     grid-template-columns: 50% 50%;
      display: grid;
+     grid-template-columns: 50% 50%;
+     grid-template-rows: auto 1fr;
 
      margin: 0;
      padding: 0;
-     height: 70vh;
+     height: auto;
      background-color: black;
-     width: 100%;
 }
 
 
@@ -108,8 +108,6 @@ nav ul li a {
      display: grid;
      grid-column: 1/2;
 
-
-     background: linear-gradient(to right, rgba(0,0,0,1), rgba(0,0,0,1) 45%, rgba(0, 0, 0, 0) 65%, rgba(0, 0, 0, 0));;
      height: 80vh;
      margin: 0;
      padding-left: 2em;
@@ -123,6 +121,7 @@ nav ul li a {
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
+  
 }
 
 
@@ -130,7 +129,9 @@ nav ul li a {
      padding-top: 2em;
      color: white;
      margin: 0;
-     width: 40%;
+     width: 70%;
+     margin-left: 50px;
+
 }
 
 .about aside p{
@@ -150,9 +151,7 @@ nav ul li a {
   );
 }
 
-.about aside p span{
-     z-index: 3;
-}
+
 
 .about h4 {
      font-weight:bolder;
@@ -163,9 +162,7 @@ nav ul li a {
      
 }
 
-.about * {
-     overflow: hidden;
-}
+
 
 section p {
      font-size: clamp(.75rem, 1.4vw, 1rem);
@@ -173,12 +170,54 @@ section p {
 }
 
 
-.logos {
+.logo-row {
+     display: flex;
+     flex-direction: row;
+     gap: 50px;
      background-color: rgb(0, 0, 0);
      height: 7em;
+     width: 100%;
+     padding-right: 80px;
+}
+
+.logo-row > * {
      margin: 0;
      padding: 0;
-     background-image: url(../images/logobanner.webp);
+}
+
+.fbwatch {
+     width: 20%;
+     background-image: url(../images/fbwatchgldgrad.webp);
+     background-size:contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.history{
+     width: 20%;
+     background-image: url(../images/historyglddrag.webp);
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+     margin: 15px 15px;
+}
+.netflix{
+     width: 20%;
+
+     background-image: url(../images/netflixgldgrad.webp);
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.usanet{
+     width: 20%;
+     background-image: url(../images/usagldgrad.webp);
+     background-size: contain;
+     background-repeat: no-repeat;
+     background-position: center;
+}
+.vh1 {
+     width: 20%;
+     background-image: url(../images/vh1gldgrad.webp);
      background-size: contain;
      background-repeat: no-repeat;
      background-position: center;
@@ -200,8 +239,9 @@ section p {
 .poster-container > p {
      margin: 0;
      padding: 0 4em;
-     background-color: #ffffffb3;
+     background-color: #000000b3;
      width: 100%;
+     color: #ffffff;
 }
 
 .poster-container > h2 {
@@ -217,9 +257,9 @@ section p {
 }
 
 .poster-container > p {
-     padding-bottom: 2em;
+     padding-bottom: 1.5em;
      font-size: 1.5em;
-     font-weight: 600;
+     font-weight: 400;
 }
 
 .poster-container {
@@ -233,24 +273,70 @@ section p {
    
 
 .testimony-contact{
-     background-color: white;
+     background-color: rgb(0, 0, 0);
      display: flex;
      align-items: center;
 }
 
 .testimony {
-     width: 50%;
-     color: #ffffff00;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-items: center;
+
+     margin: 3em 2em;
+     padding-top: 3em;
+
+     text-align: center;
+     width: 70%;
+     color: #ffffff;
      height: 50vh;
-     background-image: url(../images/testimonial1.webp);
-     background-size: contain;
-     background-repeat: no-repeat;
-     background-position: center;
+
+}
+
+.testimony::after{
+     content: "";
+     background-color: #48484858;
+     height: 40%;
+     width: 30%;
+     position: absolute;
+}
+
+
+hr {
+     width: 25%;
+}
+
+.testimony > aside {
+     width: 80%;
+     z-index: 2;
+     font-size: 1.7em;
+
+}
+
+.title {
+     font-weight: 200;
+     font-size: 1.5em;
+}
+
+.name {
+     font-size: 3em;
+     font-weight: 700;
+}
+
+.testimony > span {
+     z-index: 2;
+}
+
+.testimony > i {
+     font-size: 100px;
+     z-index: 2;
 }
 
 .contact-text {
      width: 50%;
      margin: 0 2em;
+     color: #ffffff;
 }
 
 .contact-text > * {
@@ -269,7 +355,7 @@ section p {
 }
 
 .contact-form {
-     background-color: white;
+     background-color: rgb(255, 255, 255);
      padding: 1em;
      width: 100%;
      text-align: center;
@@ -300,9 +386,18 @@ section p {
      background-color: red;
      color: white;
      padding: .5em 0;
-     width: 20% !important;
+     width: 20%;
      border: 2px solid rgb(198, 14, 14);
-     border-radius: 6px;
+     border-radius: 4px;
+}
+
+.contact-us-button {
+     padding: 5px;
+     margin: 20px 25%;
+     width: 50%;
+     font-size: 1.5em;
+     font-weight: 600;
+
 }
 
 
@@ -380,6 +475,10 @@ header > h1 {
 /* FOOTER
 /*******************************************/
 
+.foot-break {
+     width: 85%;
+}
+ 
 footer {
      height: 25vh;
      width: 100%;
