--- a/css/style.css
+++ b/css/style.css
@@ -539,6 +539,16 @@ footer {
      color: red;
 }
 
+.button{
+     transition-duration: 0.4s;
+     border: 0;
+}
+
+.button:hover {
+     box-shadow: 0 12px 16px 0 rgba(255, 255, 255, 0.24), 0 17px 50px 0 rgba(255, 255, 255, 0.19);
+     background-color: rgb(255, 255, 255);
+     color: rgb(255, 0, 0);
+}
 
 /******************************************
 /* CONTACT US PAGE
@@ -548,7 +558,7 @@ footer {
      display: grid;
      grid-template-columns: 25% 25% 25% 25%;
      grid-template-rows: auto;
-     margin-top: 40px;
+     margin-top: 60px;
 
 }
 
@@ -621,17 +631,17 @@ input:focus {
 .contact-info {
      display: grid;
      grid-column: 1/2;
-     grid-row: 2/3;
+     grid-row: 1/2;
 
      width: auto;
      justify-items: center;
-     height: 30%;
+     height: 60%;
 
 
      position: sticky;
-     top: 80px;
+     top: 50px;
 
-     margin: 0 50px;
+     margin: 20px 50px;
      background-color: #b90b0b8b;
      color: white;
      font-size: 1em;
@@ -645,6 +655,7 @@ input:focus {
 h6 {
      font-size: 1.5em;
      font-weight: 300;
+     text-align: center;
      
      margin: 0;
      padding: 0;
