--- a/css/style.css
+++ b/css/style.css
@@ -665,3 +665,188 @@ h6 {
      padding: 10px 0;
 }
 
+
+
+/******************************************
+/* PHOTOGRAPHY PAGE
+/*******************************************/
+
+/* #photo-main {
+     color: white;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+}
+
+.headshots {
+     ;
+     width: 80%;
+}
+
+.carousel {
+     position: relative;
+     width: 100%;
+     overflow: hidden;
+     
+   }
+   .carousel-inner {
+     display: flex;
+     width: 100%;
+     transition: transform 0.3s ease-in-out;
+   }
+   .carousel-inner img {
+     margin: 10px;
+     width: 33.3333%;
+     height: auto;
+   }
+   .carousel-prev, .carousel-next {
+     position: absolute;
+     top: 50%;
+     transform: translateY(-50%);
+     padding: 8px;
+     border: none;
+     background-color: rgba(0, 0, 0, 0.43);
+     color: white;
+     font-size: 24px;
+     cursor: pointer;
+   }
+   .carousel-prev {
+     left: 0;
+   }
+   .carousel-next {
+     right: 0;
+   }
+    */
+
+#photo-main {
+     color: white;
+     margin: 0;
+     padding: 0;
+}
+
+#check1,
+#check2,
+#check3,
+#check4 {
+     display: none;
+}
+
+.gallery-container {
+     width: 100%;
+     text-align: center;
+     margin: 40px 0;
+}
+
+.gallery-container h1 {
+     position: relative;
+     font-weight: normal;
+     font-size: 5em;
+     margin: 40px 0;
+}         
+
+.gallery-container h1:before{
+     content: "";
+     position: absolute;
+     width: 200px;
+     height: 3px;
+     background-color: crimson;
+     bottom: -10px;
+     left: 50%;
+     transform: translateX(-50%);
+}
+
+.gallery-top-content {
+     background-color: crimson;
+     width: 90%;
+     margin: 0 auto 20px auto;
+     display: flex;
+     justify-content: space-around;
+     align-items: center;
+     border-radius: 5px;
+ 
+}
+
+
+label {
+     display: inline-block;
+     height: 100%;
+     padding: 0 5px;
+     margin: 0 30px;
+     line-height: 60px;
+     font-size: 1.5em;
+     font-weight: normal;
+     cursor: pointer;
+     transition: .7s;
+}
+
+label:hover {
+     color: lightcoral;
+     font-size: 2em;
+}
+
+.photo-gallery {
+     width: 90%;
+     margin: auto;
+     display: grid;
+     grid-template-columns: repeat(4, 1fr);
+     grid-gap: 20px ;
+}
+
+.pic{
+     position: relative;
+     height: 230px;
+     cursor: pointer;
+}
+
+.pic img {
+     width: 100%;
+     height: 100%;
+     border-radius: 2px;
+     transition: .5s;
+}
+
+#check1:checked ~ .gallery-container .photo-gallery .pic{
+     opacity: 1;
+     transform: scale(1);
+     position: relative;
+     transition: .5s;
+}
+
+#check2:checked ~ .gallery-container .photo-gallery .headshot{
+     opacity: 1;
+     transform: scale(1);
+     position: relative;
+}
+#check2:checked ~ .gallery-container .photo-gallery .event,
+#check2:checked ~ .gallery-container .photo-gallery .estate{
+     opacity: 0;
+     transform: scale(0);
+     position: absolute;
+     transition: 0s;
+}
+
+#check3:checked ~ .gallery-container .photo-gallery .event{
+     opacity: 1;
+     transform: scale(1);
+     position: relative;
+}
+#check3:checked ~ .gallery-container .photo-gallery .headshot,
+#check3:checked ~ .gallery-container .photo-gallery .estate{
+     opacity: 0;
+     transform: scale(0);
+     position: absolute;
+     transition: 0s;
+}
+
+#check4:checked ~ .gallery-container .photo-gallery .estate{
+     opacity: 1;
+     transform: scale(1);
+     position: relative;
+}
+#check4:checked ~ .gallery-container .photo-gallery .headshot,
+#check4:checked ~ .gallery-container .photo-gallery .event{
+     opacity: 0;
+     transform: scale(0);
+     position: absolute;
+     transition: 0s;
+}
