--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ html, body {
      overflow-x: hidden;
      background-color: rgb(0, 0, 0);
      font-family: 'Kanit', sans-serif;
+     color: white;
  }
 
 body {
@@ -387,7 +388,7 @@ hr {
      color: white;
      padding: .5em 0;
      width: 20%;
-     border: 2px solid crimson
+     border: 2px solid crimson;
      border-radius: 4px;
 }
 
@@ -417,6 +418,7 @@ header > h1 {
      background-color: black;
      height: 100vh;
      background-image: url(../images/hero_actor.webp);
+     background-attachment: fixed;
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
@@ -476,6 +478,9 @@ header > h1 {
 
 .foot-break {
      width: 85%;
+     border: 0;
+     height: 1.5px;
+     background-color: crimson;
 }
  
 footer {
@@ -535,7 +540,11 @@ footer {
      padding: 1px 0;
 }
 
-.footnav li:first-child {
+.footnav a{
+     color: white;
+}
+
+.footnav a:first-child {
      color: crimson;
 }
 
@@ -926,3 +935,200 @@ label:hover {
 /******************************************
 /* CONSULT PAGE
 /*******************************************/
+
+
+.consult-container {
+     text-align: center;
+     display: grid;
+     grid-template-columns: 10% 40% 40% 10%;
+}
+
+.consult-header {
+     display: grid;
+     grid-column: 2/4;
+}
+
+.consult-container h3 {
+     font-size: 3em;
+     font-weight: normal;
+     color: crimson;
+}
+
+.consult-container p {
+     font-size: 1.5em;
+     margin-bottom: 80px;
+}
+
+
+
+
+.testimony-consult-block {
+     display: grid;
+     grid-template-columns: 10% 40% 40% 10%;
+     margin-top: 80px;
+}
+
+.testimony-consult-block .testimony {
+     display: grid;
+     grid-column: 2/4;
+
+     justify-self: center;
+     width: 80%;
+
+     background-color: rgba(220, 20, 60, 0.212);
+     border-radius: 25px;
+
+     margin: 20px;
+     padding: 0;
+     height: auto;
+}
+
+.testimony-consult-block .testimony:after {
+     height: 0;
+}
+
+.testimony-consult-block i {
+     font-size: 3.5em;
+}
+
+.testimony-consult-block aside {
+     font-weight: 200;
+
+}
+
+
+
+.consult-midcopy {
+     display: flex;
+     flex-direction: column;
+     margin: 50px 300px;
+     font-size: 2em;
+     font-weight: 270;
+}
+
+.consult-form-container {
+     display: grid;
+     grid-template-columns: 25% 25% 25% 25%;
+     background-color: rgb(220, 20, 60);
+     padding-bottom: 70px;
+}
+
+.prices {
+     display: flex;
+     flex-wrap: wrap;
+
+     margin: 50px;
+
+     align-content: center;
+     justify-content: center;
+
+     align-items: center;
+     justify-content: space-around;
+
+
+     gap: 100px;
+}
+
+.price-example {
+     content: "";
+     gap: 20px;
+     height: 600px;
+     width: 350px;
+}
+
+.consult-one {
+     background-image: url(/images/exampleconsult1.png);
+     background-size: contain;
+}
+.consult-two {
+     background-image: url(/images/exampleconsult2.png);
+     background-size: contain;
+}
+.consult-three {
+     background-image: url(/images/exampleconsult3.png);
+     background-size: contain;
+}
+.consult-four {
+     background-image: url(/images/exampleconsult4.png);
+     background-size: contain;
+}
+
+
+/******************************************
+/* WEDDING PAGE
+/*******************************************/
+
+
+.wedding-header {
+     text-align: center;
+}
+.wedding-header h1 {
+     color: crimson;
+     font-size: 8em;
+     margin-bottom: 0;
+     font-weight: 200;
+}
+.wedding-header h2{
+     font-weight: normal;
+     font-size: 3em;
+}
+.wedding-hero {
+     display: grid;
+     grid-template-columns: 10% 40% 40% 10%;
+     margin-bottom: 60px;
+     height: 50vh;
+}
+.wedding-hero figure {
+     display: grid;
+     grid-column: 2/3;
+}
+.wedding-hero-text{
+     display: grid;
+     grid-column: 3/4;
+     align-content: center;
+}
+.wedding-hero-text span{
+     margin: 10px;
+     padding: 0 10px;
+     font-size: 1.5em;
+     font-weight: 200;
+}
+.wedding-hero figure {
+     background-image: url(https://placekitten.com/650/650);
+     background-size: cover;
+     box-shadow: 0 0 68px 68px rgb(0, 0, 0) inset;
+}
+.couple-cards {
+     display: grid;
+     grid-template-columns: 10% 20% 60% 10%;
+     height: 30vh;
+     margin: 80px;
+     background-color: rgba(220, 20, 60, 0.561);
+     border-radius: 20px;
+}
+
+.couple-cards figure {
+     display: grid;
+     grid-column: 1/3;
+     background-image: url(https://placekitten.com/750/750);
+     background-position: center;
+     height: 30vh;
+     border-radius: 15px;
+     margin: 0;
+}
+
+.couple-cards p {
+     display: grid;
+     grid-column: 3/5;
+     padding: 50px;
+     font-size: clamp(.75rem, 1.4vw, 2.3rem);     
+     font-weight: 300;
+}
+
+.wedding-pre-gallery {
+     background-color: crimson;
+     height: 3px;
+     width: 60%;
+     border: 0;
+     margin-bottom: 80px ;
+}
