--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ nav ul li a {
      grid-template-columns: 50% 50%;
      grid-template-rows: auto 1fr;
 
-     margin: 0 15%;
+     margin: 20px 10%;
      padding: 0;
      height: auto;
      background-color: black;
@@ -107,6 +107,9 @@ nav ul li a {
 .gradient {
      display: grid;
      grid-column: 1/2;
+
+     align-content: center;
+     justify-content: center;
 
      height: 80vh;
      margin: 0;
@@ -128,16 +131,26 @@ nav ul li a {
      padding-top: 2em;
      color: white;
      margin: 0;
-     width: 70%;
-     margin-left: 50px;
+     width: 90%;
+
 
 }
 
 .about aside p{
      font-style: italic;
-     font-size: x-large;
+     font-size: 4em;
+     font-weight: 300;
      margin-bottom: 0;
      padding-bottom: 0%;
+}
+
+.about h4 {
+     font-weight:bolder;
+     font-size: 2em;
+     margin: .5em;
+     padding-top: 0%;
+     text-align: right;
+     
 }
 
 .highlight {
@@ -152,14 +165,7 @@ nav ul li a {
 
 
 
-.about h4 {
-     font-weight:bolder;
-     font-size: x-large;
-     margin: .5em;
-     padding-top: 0%;
-     text-align: right;
-     
-}
+
 
 
 
