--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ nav ul li a {
 
      margin: 20px 10%;
      padding: 0;
-     height: auto;
+     height: 80vh;
      background-color: black;
 }
 
@@ -138,7 +138,7 @@ nav ul li a {
 
 .about aside p{
      font-style: italic;
-     font-size: 4em;
+     font-size: clamp(2rem, 2.5vw, 4rem);
      font-weight: 300;
      margin-bottom: 0;
      padding-bottom: 0%;
@@ -164,15 +164,28 @@ nav ul li a {
 }
 
 
-
-
-
-
-
 section p {
      font-size: clamp(.75rem, 1.4vw, 1rem);
    
 }
+
+.learn-more-button {
+     width: 100%;
+     background-color: black;
+     border: none;
+     color: white;
+     font-size: 1.6em;
+     display: grid;
+
+     margin-top: 280px;
+}
+
+.learn-more-button a {
+     color: crimson;
+     display: grid;
+     text-align: center;
+}
+
 
 
 .logo-row {
@@ -304,8 +317,8 @@ section p {
 .testimony::after{
      content: "";
      background-color: #48484858;
-     height: 40%;
-     width: 30%;
+     height: 23vh;
+     width: 30vw;
      position: absolute;
 }
 
@@ -336,7 +349,7 @@ hr {
 }
 
 .testimony > i {
-     font-size: 100px;
+     font-size: 70px;
      z-index: 2;
 }
 
@@ -564,6 +577,24 @@ footer {
      background-color: rgb(255, 255, 255);
      color: crimson;
 }
+
+
+/******************************************
+/* LEARN MORE ABOUT ALLISON PAGE
+/*******************************************/
+
+.learn-container {
+ padding: 60px;
+ margin: 0 20%;
+ height: 100%;
+ background-color: rgb(20, 20, 20);
+}
+
+.learn-container p{
+     font-weight: 200;
+     font-size: clamp(1rem, 2.5vw, 2.3rem);     
+}
+
 
 /******************************************
 /* CONTACT US PAGE
