--- a/css/style.css
+++ b/css/style.css
@@ -92,39 +92,15 @@ nav ul li a {
 }
    
 .about {
-     display: grid;
-     grid-template-columns: 50% 50%;
-     grid-template-rows: auto 1fr;
-
-     margin: 20px 10%;
+     position: relative;
+     display: flex;
+     flex-direction: row;
+     margin: 20px 0 20px 5%;
      padding: 0;
-     height: 80vh;
+     height: 600px;
      background-color: black;
 }
 
-
-
-.gradient {
-     display: grid;
-     grid-column: 1/2;
-
-     align-content: center;
-     justify-content: center;
-
-     height: 80vh;
-     margin: 0;
-}
-
-.hero-img {
-     display: grid;
-     grid-column: 2/3;
-
-     background-image: url(../images/headshot.webp);
-     background-size: contain;
-     background-repeat: no-repeat;
-     background-position: center;
-  
-}
 
 
 .about p, h4{
@@ -153,8 +129,16 @@ nav ul li a {
      
 }
 
+.learn-header {
+     margin-top: 70px;
+     text-align: center;
+     font-size: 5rem;
+     font-weight: 500;
+     color: crimson;
+}
+
 .highlight {
-     border-radius: 2em 6em 1em 5em;
+     font-weight: 400;
   background-image: linear-gradient(
     -100deg,
     rgba(220, 20, 60, 0.756),
@@ -169,23 +153,34 @@ section p {
    
 }
 
+.quote-text {
+     display: flex;
+     flex-direction: column;
+}
+
 .learn-more-button {
      width: 100%;
      background-color: black;
      border: none;
      color: white;
      font-size: 1.6em;
-     display: grid;
+     margin-top: auto;
+     margin-bottom: 15%;
 
-     margin-top: 280px;
 }
 
 .learn-more-button a {
      color: crimson;
-     display: grid;
      text-align: center;
 }
 
+
+
+.head-vid {
+     width: 100%;
+     height: 600px;
+     object-fit: cover;
+}
 
 
 .logo-row {
@@ -244,7 +239,7 @@ section p {
 .posters {
      margin: 0;
      padding: 0;
-     height: 80vh;
+     height: 700px;
      background-color: rgb(255, 255, 255);
      background-image: url(../images/POSTERS.webp);
      background-attachment: fixed;
@@ -271,13 +266,13 @@ section p {
      padding-top: 1em;
      color: rgba(164, 18, 5, 0);
      font-weight: 900;
-     font-size: 3em;
+     font-size: clamp(1.5rem, 3vw, 3em);
 
 }
 
 .poster-container > p {
-     padding-bottom: 1.5em;
-     font-size: 1.5em;
+     padding-bottom: 20px;
+     font-size: clamp(1rem, 2.5vw, 2em);
      font-weight: 400;
 }
 
@@ -288,13 +283,14 @@ section p {
      flex-direction: column;
      text-align: center;
      background-color: rgba(0, 0, 0, 0.59);
-     height: 80vh; /* Set a height to make vertical centering work */
+     height: 700px;
 }
    
 
 .testimony-contact{
      background-color: rgb(0, 0, 0);
      display: flex;
+     flex-direction: row;
      align-items: center;
 }
 
@@ -310,27 +306,38 @@ section p {
      text-align: center;
      width: 70%;
      color: #ffffff;
-     height: 50vh;
+     height: 400px;
 
 }
 
 .testimony::after{
      content: "";
      background-color: #48484858;
-     height: 23vh;
+     height: 260px;
      width: 30vw;
      position: absolute;
 }
 
 
-hr {
+.testimony hr {
      width: 25%;
+     margin: 4px;
+     color: white;
+     height: .5px;
+     border: none;
+     background-color: white;
+}
+
+.testimony img {
+     border-radius: 100px;
+     height: 80px;
+     opacity: 60%;
 }
 
 .testimony > aside {
      width: 80%;
      z-index: 2;
-     font-size: 1.7em;
+     font-size: clamp(1rem, 2vw, 2rem);
 
 }
 
@@ -340,7 +347,7 @@ hr {
 }
 
 .name {
-     font-size: 3em;
+     font-size: clamp(1.5rem, 3vw, 3em);
      font-weight: 700;
 }
 
@@ -355,7 +362,7 @@ hr {
 
 .contact-text {
      width: 50%;
-     margin: 0 2em;
+     margin: 0 auto;
      color: #ffffff;
 }
 
@@ -436,11 +443,13 @@ header > h1 {
 .hero {
      background-color: black;
      height: 100vh;
+     min-height: 600px;
      background-image: url(../images/hero_actor.webp);
      background-attachment: fixed;
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
+     z-index: 5;
 
      display: flex;
      flex-direction: column;
@@ -503,7 +512,7 @@ header > h1 {
 }
  
 footer {
-     height: 25vh;
+     height: 200px;
      width: 100%;
      display: flex;
      padding-top: 3em;
@@ -546,7 +555,7 @@ footer {
 .footnav {
      color: white;
      width: 20%;
-     height: 20vh;
+     height: 200px;
 }
 
 .footnav > ul {
@@ -563,8 +572,15 @@ footer {
      color: white;
 }
 
-.footnav a:first-child {
+.current-page {
      color: crimson;
+     transition: all .5s;
+}
+
+.current-page:hover {
+     background-color: white;
+     border-radius: 5px;
+     padding: 0 2px;
 }
 
 .button{
@@ -719,7 +735,7 @@ h6 {
 /*******************************************/
 
 
-#photo-main {
+/* #photo-main {
      color: white;
      margin: 0;
      padding: 0;
@@ -851,8 +867,260 @@ label:hover {
      transform: scale(0);
      position: absolute;
      transition: 0s;
+} */
+
+
+.photos-main {
+     width: 90%;
+     margin: 40px auto;
 }
 
+.photos-main h2 {
+     font-size: 4rem;
+     margin: 0;
+     font-weight: 200;
+     text-shadow: 2px 2px 3px crimson, 1px 1px 2px crimson;
+}
+
+hr {
+     width: 99.5%;
+     color: crimson;
+     background-color: crimson;
+     height: 2px;
+     margin-top: 0;
+}
+
+.container {
+     display: flex;
+     width: 100%;
+     padding: 0;
+     box-sizing: border-box;
+     height: 600px;
+   }
+   
+   .box {
+     flex: 1;
+     overflow: hidden;
+     transition: all .5s;
+     margin: 0 3px;
+     box-shadow: 0 20px 30px rgba(0,0,0,.1);
+     line-height: 0;
+     cursor: pointer;
+   }
+   
+   .box > img {
+     width: 100%;
+     height: 500px;
+     object-fit: cover; 
+     transition: .5s;
+   }
+   
+   .box > span {
+     font-size: 2rem;
+     display: none;
+     text-align: center;
+     line-height: 2.6;
+     transition: all .5;
+   }
+
+   .box:hover > span {
+     display: block;
+   }
+   
+   .box:hover { flex: 1 1 50%; }
+   .box:hover > img {
+     width: 100%;
+     height: 500px;
+   }
+    
+
+   .bts-photos h2{
+     text-align: center;
+   }
+
+   .bts-photos hr {
+     width: 79%;
+   }
+
+
+   .headshot-wrapper {
+     width: 100%;
+     height: 0;
+     padding-bottom: 100%;
+     position: relative;
+     overflow: hidden;
+     cursor: pointer;
+   }
+   
+   .headshot-wrapper img {
+     position: absolute;
+     top: 0;
+     left: 50%;
+     transform: translateX(-50%);
+     width: 100%;
+     height: auto;
+   }
+
+   .masonry-gallery {
+     column-count: 3;
+     column-gap: 5px;
+     margin: 0 120px;
+   }
+   
+   .masonry-wrapper {
+     display: inline-block;
+     position: relative;
+     overflow: hidden;
+     cursor: pointer;
+     margin-bottom: 2px;
+   }
+
+   .masonry-wrapper img {
+     width: 100%;
+     height: auto;
+     display: block;
+   }
+
+   .gallery {
+     display: grid;
+     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+     grid-gap: 4px;
+     width: 100%;
+   }
+
+   .headshot-wrapper {
+     width: 100%;
+     height: 0;
+     padding-bottom: 100%;
+     position: relative;
+     overflow: hidden;
+     cursor: pointer;
+   }
+
+   .headshot-wrapper img {
+     position: absolute;
+     top: 0;
+     left: 50%;
+     transform: translateX(-50%);
+     width: 100%;
+     height: auto;
+   }
+
+   .lightbox {
+     position: fixed;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     background-color: #1f0404e9;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     z-index: 23;
+   }
+   
+   .lightbox img {
+     max-width: 90%;
+     max-height: 90%;
+     z-index: 18;
+   }
+   
+   .hidden {
+     display: none;
+   }
+
+   .wedding-gallery {
+     width: 100%;
+     overflow: hidden;
+     padding: 0;
+   }
+
+   .wedding-gallery li {
+     position: relative;
+     list-style-type: none;
+     display: grid;
+     grid-template-rows: 300px;
+     transition: grid-template-rows .5s;
+
+   }
+
+   .wedding-overlay {
+     background-color: rgba(220, 20, 60, 0.56);
+     display: block;
+     width: 100%;
+     height: 100%;
+     top: 0;
+     left: 0;
+     position: absolute;
+     z-index: 8;
+   }
+
+   .wedding-info {
+     position: relative;
+     width: 100%;
+     z-index: 10;
+     color: #fff;
+     display: block;
+     text-align:center;
+     padding: 30px 20px 20px;
+   }
+
+   .wedding-info h2 {
+     font-size: 3rem;
+     font-weight: 20;
+     text-shadow: 2px 2px 2px crimson, 3px 3px 3px crimson;
+   }
+
+   .wedding-info span {
+     display: block;
+     font-size: 2rem;
+     margin: 0 auto;
+     margin-top: 60px;
+     padding: 7px;
+     width: fit-content;
+     
+     border: 2px solid white;
+     border-radius: 20px;
+     cursor: pointer;
+     transition: all .5s;
+   }
+
+   .wedding-info span:hover {
+     border: 2px solid crimson;
+     color: crimson;
+     text-shadow: 2px 2px 2px white;
+     box-shadow: inset 2px 2px 2px white, 2px 2px 2px white;
+   }
+
+   .wedding-description {
+     margin-top: 80px;
+     opacity: 0;
+     visibility: hidden;
+     z-index: -5;
+     transition: opacity .8s, visibility .8s;
+   }
+
+   .wedding-description .headshot{
+     height: 100%;
+     transition: all .8s;
+   }
+
+   .bg-img img {
+     position: absolute;
+     top:0;
+     min-width: 100%;
+     object-position: 0 -250px;
+   }
+
+   .show {
+     grid-template-rows: 1000px !important;
+   }
+
+   .unhide {
+     opacity: 1;
+     visibility: visible;
+     z-index: 5;
+   }
 
 
 /******************************************
@@ -890,6 +1158,11 @@ label:hover {
 
 }
 
+.video-text h1 {
+     color: white;
+     font-weight: 200;
+}
+
 .video-text {
      display: grid;
      grid-column: 2/4;
@@ -897,20 +1170,35 @@ label:hover {
      padding: 0;
 }
 
+.video-text .highlight {
+     padding: 9px;
+     border-radius: 15px;
+     border: 3px solid rgb(255, 255, 255);
+     border-bottom: 10px solid white;
+     transition: all .2s;
+}
+
+.video-text .highlight:hover {
+     transform: translateY(7px);
+     border-bottom: 0;
+     border: 3px solid white;
+     margin-bottom: 7px;
+}
+
 .hero-vid {
      display: grid;
      grid-column: 1/5;
-     height: 70vh;
+     height: 650px;
      position: relative;
 
-     background-image: url(/images/minterview.png);
+     background-image: url(/images/filam.jpg);
      background-size: cover;
 }
 
 .vid-one {
      display: grid;
      grid-column: 1/3;
-     height: 45vh;
+     height: 400px;
      position: relative;
 
      background-image: url(/images/mposter.png);
@@ -922,10 +1210,10 @@ label:hover {
 .vid-two {
      display: grid;
      grid-column: 3/5;
-     height: 45vh;
+     height: 400px;
      position: relative;
 
-     background-image: url(/images/filam.jpg);
+     background-image: url(/images/bloodandsand.webp);
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center;
@@ -934,7 +1222,7 @@ label:hover {
 .vid-three {
      display: grid;
      grid-column: 1/3;
-     height: 45vh;
+     height: 400px;
      position: relative;
 
      background-image: url(/images/norm.jpg);
@@ -946,8 +1234,40 @@ label:hover {
 .vid-four {
      display: grid;
      grid-column: 3/5;
-     height: 45vh;
+     height: 400px;
      position: relative;
+
+     background-image: url(/images/withering.jpg);
+     background-size:cover;
+     background-repeat: no-repeat;
+     background-position: center;
+
+}
+
+.commercial-container .hero-vid {
+     background-image: url(/images/milftime.jpg);
+}
+
+.reels-container .hero-vid {
+     background-image: url(/images/apocalypse.jpg);
+}
+
+.reels-container .vid-one {
+     background-image: linear-gradient(red, black);
+}
+
+.reels-container .vid-two {
+     background-image: linear-gradient(white, red);
+}
+
+.bts-container .video-text {
+     grid-column: 1/5;
+     margin: 50px auto;
+
+}
+
+.bts-container .hero-vid {
+     background-image: url(/images/minterview.png);
 
 }
 
@@ -1050,7 +1370,7 @@ label:hover {
 .consult-midcopy {
      display: flex;
      flex-direction: column;
-     margin: 50px 300px;
+     margin: 50px 200px;
      font-size: 2em;
      font-weight: 270;
 }
@@ -1063,43 +1383,51 @@ label:hover {
 }
 
 .prices {
+     text-align: center;
+     margin: 30px auto;
+     width: fit-content;
      display: flex;
-     flex-wrap: wrap;
-
-     margin: 50px;
-
-     align-content: center;
-     justify-content: center;
-
-     align-items: center;
-     justify-content: space-around;
-
-
-     gap: 100px;
+     flex-direction: column;
+     border: 2px solid white;
+     border-radius: 10px;
+     font-size: 2rem;
 }
 
-.price-example {
-     content: "";
-     gap: 20px;
-     height: 900px;
-     width: 650px;
+.prices ul {
+     text-align: left;
+     list-style-type: none;
+     padding: 0;
+     margin: 0;
 }
 
-.consult-one {
-     background-image: url(/images/exampleconsult1.png);
-     background-size: contain;
+.prices li:nth-child(2n-1) {
+     background-color: white;
+     padding: 20px;
+     color: crimson;
 }
-.consult-two {
-     background-image: url(/images/exampleconsult2.png);
-     background-size: contain;
+
+.prices li {
+     padding: 20px;
 }
-.consult-three {
-     background-image: url(/images/exampleconsult3.png);
-     background-size: contain;
+
+.price-time {
+     background-color: crimson;
+     padding: 20px;
 }
-.consult-four {
-     background-image: url(/images/exampleconsult4.png);
-     background-size: contain;
+
+.prices a {
+     text-decoration: none;
+     color: white;
+     background-color: crimson;
+     border-radius: 15px;
+     width: 70%;
+     margin: 20px auto;
+     transition: all .5s;
+}
+
+.prices a:hover {
+     background-color: white;
+     color: crimson;
 }
 
 
@@ -1125,7 +1453,7 @@ label:hover {
      display: grid;
      grid-template-columns: 10% 40% 40% 10%;
      margin-bottom: 60px;
-     height: 50vh;
+     height: 550px;
 }
 .wedding-hero figure {
      display: grid;
@@ -1143,35 +1471,9 @@ label:hover {
      font-weight: 200;
 }
 .wedding-hero figure {
-     background-image: url(https://placekitten.com/650/650);
+     background-image: url(https://placekitten.com/650/950);
      background-size: cover;
      box-shadow: 0 0 68px 68px rgb(0, 0, 0) inset;
-}
-.couple-cards {
-     display: grid;
-     grid-template-columns: 10% 20% 60% 10%;
-     height: 30vh;
-     margin: 80px;
-     background-color: rgba(220, 20, 60, 0.561);
-     border-radius: 20px;
-}
-
-.couple-cards figure {
-     display: grid;
-     grid-column: 1/3;
-     background-image: url(https://placekitten.com/750/750);
-     background-position: center;
-     height: 30vh;
-     border-radius: 15px;
-     margin: 0;
-}
-
-.couple-cards p {
-     display: grid;
-     grid-column: 3/5;
-     padding: 50px;
-     font-size: clamp(.75rem, 1.4vw, 2.3rem);     
-     font-weight: 300;
 }
 
 .wedding-pre-gallery {
@@ -1181,3 +1483,4 @@ label:hover {
      border: 0;
      margin-bottom: 80px ;
 }
+
